--- a/src/components/Manage/index.less
+++ b/src/components/Manage/index.less
@@ -1,6 +1,7 @@
 .site-layout-background-manage {
   background: #fff;
-  margin: 1.5rem 1rem 0rem 1rem;
+  margin: 1rem;
   padding: 1.5rem;
-  min-height: 96vh
+  height: 90%;
+  margin-top: 4rem;
 }
