--- a/src/components/Page/index.less
+++ b/src/components/Page/index.less
@@ -31,5 +31,6 @@
   background: #fff;
   margin: 1.5rem 1rem 0rem 1rem;
   padding: 1.5rem;
-  min-height: 91vh
+  min-height: 90vh;
+  height: 90vh;
 }
