--- a/src/components/Page/index.less
+++ b/src/components/Page/index.less
@@ -28,7 +28,7 @@
 }
 
 .site-layout-background {
-  background: #fff;
+  background: #262626;
   margin: 1.5rem 1rem 0rem 1rem;
   padding: 1.5rem;
   min-height: 90vh;
