--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,7 @@
 @import '~antd/dist/antd.less';
+@import '~antd/dist/antd.dark.less'; // 引入官方提供的暗色 less 样式入口文件
+@import '~antd/dist/antd.compact.less'; // 引入官方提供的紧凑 less 样式入口文件
+@import (inline) "./node_modules/codemirror/lib/codemirror.css";
 
 body {
   margin: 0;
