功能完成，最终版本

--- a/src/components/Home/index.less
+++ b/src/components/Home/index.less
@@ -13,3 +13,13 @@ html,body {
   height: 100%;
   background-color: aqua;
 }
+.link-to-manage {
+  width: 7rem;
+  height: 3rem;
+  position: absolute;
+  z-index: 10;
+  color: #fff;
+  font-size: 1rem;
+  top: 1rem;
+  left: 1rem;
+}
