--- a/src/components/Page/index.less
+++ b/src/components/Page/index.less
@@ -1,6 +1,9 @@
 .footer {
+  height: 3rem;
   padding: 0.625rem 3.125rem;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .footer > span {
   font-size: 0.875rem;
@@ -31,6 +34,44 @@
   background: #262626;
   margin: 1.5rem 1rem 0rem 1rem;
   padding: 1.5rem;
-  min-height: 90vh;
-  height: 90vh;
+  height: 100%;
+  padding-top: 2rem;
+}
+
+.page-content {
+  display: flex;
+  width: 100%;
+  height: 99%;
+  position: relative;
+}
+
+.page-content-left {
+  width:calc(40% - 4px);
+  height:100%;  
+  overflow: hidden;
+}
+
+.page-content-resize {
+  width:4px;
+  height:100%;  
+  cursor: col-resize;
+}
+
+.page-content-right {
+  width:60%;
+  height:100%;  
+  overflow: hidden;
+  flex-grow: 1;
+}
+.page-content-bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: -2rem;
+  font-size: 1rem;
+  height: 2rem;
+}
+.CodeMirror-overlayscroll-horizontal div, .CodeMirror-overlayscroll-vertical div {
+  background: #3e3d3d !important;
 }
