功能完成，最终版本

--- a/src/components/Page/index.less
+++ b/src/components/Page/index.less
@@ -43,29 +43,26 @@
   width: 100%;
   height: 84.78vh;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .page-content-left {
   width:calc(40% - 6px);
   height:100%;  
   overflow: hidden;
-  float: left;
 }
 
 .page-content-resize {
   width:6px;
   height:100%;  
   cursor: col-resize;
-  float: left;
 }
 
 .page-content-right {
   width:60%;
   height:100%;  
   overflow: hidden;
-  // flex-grow: 1;
-  float: left;
+  flex-grow: 1;
 }
 .page-content-bottom {
   width: 100%;
