--- a/src/components/Manage/components/articleRelease/index.less
+++ b/src/components/Manage/components/articleRelease/index.less
@@ -2,18 +2,18 @@
 .manage-content {
   display: flex;
   width: 100%;
-  height: 95%;
+  height: 84.78vh;
   position: relative;
 }
 
 .manage-content-left {
-  width:calc(40% - 4px);
+  width:calc(40% - 6px);
   height:100%;  
   overflow: hidden;
 }
 
 .manage-content-resize {
-  width:4px;
+  width:6px;
   height:100%;  
   cursor: col-resize;
 }
@@ -29,7 +29,9 @@
   display: flex;
   justify-content: space-around;
   position: absolute;
-  bottom: -3rem;
+  top: -2rem;
+  font-size: 1rem;
+  height: 2rem;
 }
 
 span.cm-keyword {
