--- a/src/components/Home/index.less
+++ b/src/components/Home/index.less
@@ -11,7 +11,7 @@ html,body {
 .home-container {
   width: 100%;
   height: 100%;
-  background-color: aqua;
+  // background-color: aqua;
 }
 .link-to-manage {
   width: 7rem;
